# urdma

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
urdma-driver/: Cargo.toml  build.rs
urdma-driver/src/: lib.rs  ops.rs  rxe.rs  urdma.rs
urdma-ibverbs-binding/: Cargo.toml  build.rs
urdma-ibverbs-binding/src/: lib.rs
urdma-provider/: Cargo.toml
urdma-provider/src/: driver.rs  lib.rs  provider.rs
urdma-provider/src/driver/: rxe.rs
urdma-sys/c/: Kconfig  Makefile  main.c  urdma.h
