[package]
name = "urdma-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
provider = { path = "../urdma-provider", package = "urdma-provider", version = "0.1.0" }
ffi = { path = "../urdma-ibverbs-binding", package = "urdma-ibverbs-binding", version = "0.1.0" }

env_logger = "0.11"
log = "0.4"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
